🐛 Fix mobile bubble overflow

--- a/assets/styles/components/_hero-intro.scss
+++ b/assets/styles/components/_hero-intro.scss
@@ -1,5 +1,6 @@
 .Hero {
   background: $background-secondary;
+  overflow: hidden;
 
   @include has(container) {
     @include container();
